After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690224 - compiler warning patch
compiler warning patch
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2012-12-14 21:14 UTC by Colin Walters
Modified: 2012-12-14 21:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
see attach (1.14 KB, patch)
2012-12-14 21:14 UTC, Colin Walters
accepted-commit_now Details | Review

Description Colin Walters 2012-12-14 21:14:38 UTC
Created attachment 231593 [details] [review]
see attach

git-bz is busted, don't want to retype; see attachment
Comment 1 Dan Winship 2012-12-14 21:17:46 UTC
Comment on attachment 231593 [details] [review]
see attach

/me glares at gcc for not providing a way to get flow-control-related warnings when compiling with -O0