SoupConnection: Quiet a (mistaken) compiler warning

gcc claims 'event_id' might be uninitialized; it's wrong, but it's
hard for the optimizer to know that.  Placate it in the name of
reducing warnings.

https://bugzilla.gnome.org/show_bug.cgi?id=690224